Created images folder, Added 3 images, updated index.html created pico and pomodoro pages

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Odin Recipes Home Page</title>
 </head>
 <body>
+   
     <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/chimichanga.html">Chimichanga Recipe</a></li>
+            <li><a href="recipes/pomodoro.html">Pomodoro Sauce and Pasta Recipe</a></li>
+            <li><a href="recipes/pico.html">Pico De Gallo Recipe</a></li>
+        </ul>
 </body>
 </html>
