--- a/recipes/chimichanga.html
+++ b/recipes/chimichanga.html
@@ -7,5 +7,37 @@
 </head>
 <body>
     <h1>Chimichanga Recipe</h1>
+    <img src="../images/Chimichanga.jpg" alt="A delicious looking chimichanga burrito with sour cream and pico de gallo on top." height="500" width="500">
+    <h2>Description</h2>
+    <p>A Chimichanga is easy to make and tastes so delicious!<br> There are few ingredients needed and you can have dinner ready in a few minutes.</p>
+    <p>Chimichangas are a crispy burrito filled with beans and cheese and any meat if you so desire.</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Burrido size flour tortillas</li>
+        <li>Refried beans</li>
+        <li>Grated Chedder Cheese</li>
+        <li>(optional) Meat of your choice</li>
+        <li>Olive Oil</li>
+        <li>Sour Cream</li>
+        <li>Iceburg Lettuce</li>
+        <li>Fresh tomatoes</li>
+        <li>Your favorite hot sauce</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Lay tortilla flat</li>
+        <li>Put refried beans on tortilla (keep toward center of tortilla)</li>
+        <li>Put cheese on beans</li>
+        <li>Roll tortilla (fold left and right, then top and bottom)</li>
+        <li>Heat frying pan at medium heat with olive oil covering entire bottom of pan</li>
+        <li>Carefully put burrido into oil in pan and let cook about 2 minutes on each side until golden brown</li>
+        <li>(best to use tongs to place and remove burrido from pan)</li>
+        <li>Let burrito cool on paper towel to absord left over oil</li>
+        <li>Chop lettuce and tomatoes to your desired size</li>
+        <li>Plate burrido and top with sour cream, chopped tomatoes and chopped lettuce</li>
+        <li>Add hot sauce if you so desire</li>
+        <li>Chow down! You will be back for seconds.</li>
+    </ol>
 </body>
 </html>
